assets/css/style.css
/* CSS HEX */
:root {
    --laurel-green: #69835D;
    --desert-sand: #F6DECB;
    --copper-crayola: #D05F39;
    --charcoal: #2f4858ff;
    --raisin-black: #2d2d34ff;
    --white: #f9f9f9;
    --black: #36383F;
    --gray: #85888C;
}

/* Could extract these to a separate file, at the moment you only have two font styles, no bold or anything else */
@font-face {
    font-family: 'southland';
    src: url("/assets/fonts/southland.ttf");
    src: local(''), url('/assets/fonts/southland.ttf') format('truetype');
    font-display: swap;
    font-style: normal;
}

@font-face {
    font-family: libertine;
    src: url("/assets/fonts/linux_libertine/LinLibertine_R.ttf");
    src: local(''),
    url('/assets/fonts/linux_libertine/LinLibertine_R.ttf') format("truetype");
    font-style: normal;
}

a {
    text-decoration: none;
}

body {
    margin: 0;
    font-family: libertine, Arial, Helvetica, sans-serif;
    background-color: var(--desert-sand);
}

ul {
    list-style: none;
}

/* Header */
.header {
    background-color: var(--desert-sand);
    position: sticky;
    top: 0;
    width: 100%;
}

.logo {
    display: inline-block;
    color: var(--raisin-black);
    font-size: 40px;
    margin-left: 10px;
    font-family: 'southland', cursive;
}

@media (min-width: 1150px) {
    .logo {
        font-size: 80px;
        margin-bottom: -40px;
        margin-top: -40px;
    }
}

/* Nav styling */
.nav {
    width: 100%;
    height: 100%;
    position: fixed;
    background-color: var(--laurel-green);
    overflow: hidden;
    z-index: 9000;
}

.menu a {
    display: block;
    padding: 30px;
    color: var(--white);
}

.menu a:hover {
    background-color: var(--desert-sand);
}

.nav {
    max-height: 0;
    transition: max-height .5s ease-out;
    z-index:9000;
}

/* Menu Icon */
.hamb {
    cursor: pointer;
    float: right;
    padding: 40px 20px;
}

/* Style label tag */
.hamb-line {
    background: var(--raisin-black);
    display: block;
    height: 2px;
    position: relative;
    width: 24px;

}

/* Style span tag */
.hamb-line::before,
.hamb-line::after {
    background: var(--raisin-black);
    content: '';
    display: block;
    height: 100%;
    position: absolute;
    transition: all .2s ease-out;
    width: 100%;
}

.hamb-line::before {
    top: 5px;
}

.hamb-line::after {
    top: -5px;
}

.side-menu {
    display: none;
}

/* Hide checkbox */
/* Toggle menu icon */
.side-menu:checked ~ nav {
    max-height: 100%;
    background-color: var(--laurel-green);
    z-index: 9000;
}

.side-menu:checked ~ #headline_image {
    z-index:1;
}

.side-menu:checked ~ .hamb .hamb-line {
    background: transparent;
}

.side-menu:checked ~ .hamb .hamb-line::before {
    transform: rotate(-45deg);
    top: 0;
}

.side-menu:checked ~ .hamb .hamb-line::after {
    transform: rotate(45deg);
    top: 0;
}

/* Responsiveness */
@media (min-width: 948px) {
    .nav {
        max-height: 100%;
        height: 69px;
        top: 0;
        position: relative;
        float: right;
        width: fit-content;
        background-color: var(--desert-sand);
    }

    .menu {
        margin-top: 0;
    }

    .menu li {
        float: left;
    }

    .menu a {
        color: var(--raisin-black)
    }

    .menu a:hover {
        background-color: transparent;
        color: var(--gray);
    }

    .hamb {
        display: none;
    }
}

/* End insert from responsive menu tutorial */

/* CTA section */
#top_section {
    height: fit-content;
    margin: 0;
    background-color: var(--desert-sand);
    color: var(--raisin-black);
    display: flex;
    flex-direction: column;
    max-width: 100vw;
    width: 100%;
    text-align: center;
}

#rsvp_section {
    order: 1;
    min-width: 35vw;
    display: inline-block;
    padding-left: 10%;
    padding-right: 10%;
    margin-bottom: auto;
    top: 0px;
    vertical-align: top;
}

.image_standard {
    max-width: 100%;
}

#headline_image {
    display: inline-block;
    order: 2;
    margin-top: 5vh;
    border-radius: 0;
    position: relative;
    z-index: 0;
}

#rsvp-button {
    margin-top: 100px;
    text-decoration: none;
    color: var(--raisin-black);
    text-align: center;
    border: 3px solid #2d2d34ff;
    padding: 14px;
    border-radius: 10px;
    font-size: large;
    font-weight: bold;
}

#rsvp-button:hover {
    color: var(--laurel-green);
    background-color: var(--raisin-black);
}

#story {
    order: 2;
    max-width: 100vw;
    margin-top: 10vh;
    margin-bottom: 10vh;
    text-align: center;
}
.title {
    text-align: center;
}

@media screen and (min-width: 888px) {
    #top_section {
        flex-direction: row;
    }

    #rsvp_section {
        margin-top: 15%;
        padding-right:0;
    }

    #headline_image {
        margin-right: 5vw;
        max-width:40vw;
    }

    #headline_image .image_standard {
        border-radius: 10%;
    }
    #story {
        padding: 0 10%;
    }
}

/* Styling for things page */

#things {
    text-align: center;
}

#things-selector {
    text-align: center;
    color: var(--raisin-black);
}

#things-selector a {
    color: var(--copper-crayola);
}

.content-section {
    padding: 0 10%;
    display: flex;
    flex-direction: column;
}

.thing-card {
    padding: 0 5%;
    margin: 5% 0;
}

#eat {
    display: none;
}

#relax {
    display: none;
}
.active {
    text-decoration: underline;
    z-index:1;
}

@media screen and (min-width: 1150px) {
    .thing-card {
        padding: 0;
        margin: 0;
    }
    #things .content-section .thing-card{
        flex-direction:row;
    }
    #things .content-section .thing-card .thing-image {
        max-width: 40%;
        display:inline-block;
        padding:5%;
    }
    #things .content-section .thing-card .thing-text {
        max-width: 40%;
        display:inline-block;
        margin-top:10%;
        vertical-align:top;
    }
    
}

/* Styling for travel page */
#map-view {
    max-width: 100vw;
    width: 100vw;
    padding: 0 5%;
}

#travel {
    text-align: center;
}
#travel div  {
    height: fit-content;
    padding: 5vw 0;
}
#map-iframe {
    max-width: 100vw;
    width: 90vw;
}
@media screen and (min-width: 1150px) {
    #travel {
        flex-direction: row;
    }
    #travel div {
        padding: 5vh 5vw;
    }
}

/* Styling for venue page */
#venue {
    text-align: center;
}
#venue-info {
    display:flex;
    flex-direction: column;
}
#venue-image {
    order:2;
}
#accomodation {
    order:1;
}

@media screen and (min-width: 1150px) {
    #venue-info {
        flex-direction:row;
    }
    #venue-image {
        min-width: 30vw;
        max-width: 40vw;
    }
    #accomodation {
        padding-left:5%;
    }
    #venue-image {
        order:1;
    }
    #venue-image .image_standard {
        border-radius: 5%;
    }
    #accomodation {
        order:2;
    }
}

/* Styling for accomodation page */
#accommodation {
    text-align: center;
}

#accommodation a {
    text-decoration: none;
    color: var(--copper-crayola);
}

@media screen and (min-width: 1150px) {
    #accommodation .content-section {
        display: flex;
        flex-direction: row;
    }
    .thing-card {
        padding: 0;
        margin: 0;
        display:inline-block;
    }
    #accommodation .content-section .thing-card {
        max-width: 25%;
    }
}

/* styling for slideshow display */

/* Hide the images by default */
.mySlides {
  display: none;
  z-index:1;
}
.mySlides img {
    z-index:1;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  margin-top: -22px;
  padding: 16px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}
/* and left button to the left */
.prev {
    left: 0;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Fading animation */
.fade {
  animation-name: fade;
  animation-duration: 1.5s;
}

@keyframes fade {
  from {opacity: .4}
  to {opacity: 1}
}

/* Itinerary styling */

/* The actual timeline (the vertical ruler) */
.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
}

/* The actual timeline (the vertical ruler) */
.timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: var(--copper-crayola);
    top: 0;
    bottom: 0;
    left: 50.75%;
    margin-left: -3px;
}

/* Container around content */
.container {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 45%;
}
  
/* The circles on the timeline */
  .container::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -6px;
    background-color: var(--copper-crayola);
    border: 4px solid var(--charcoal);
    top: 15px;
    border-radius: 50%;
    z-index: 1;
}

/* Place the container to the left */
.left {
    left: 0;
}
  
/* Place the container to the right */
.right {
    left: 50%;
}
  
/* Add arrows to the left container (pointing right) */
.left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid var(--copper-crayola);
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent var(--copper-crayola);
}
  
/* Add arrows to the right container (pointing left) */
.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid var(--copper-crayola);
    border-width: 10px 10px 10px 0;
    border-color: transparent var(--copper-crayola) transparent transparent;
}
  
/* Fix the circle for containers on the right side */
.right::after {
    left: -7px;
}

/* The actual content */
.content {
    padding: 10px 30px;
    background-color: inherit;
    position: relative;
    border-radius: 6px;
    border: solid 3px var(--copper-crayola);
    color: var(--black);
  }
  
  /* Media queries - Responsive timeline on screens less than 600px wide */
  @media screen and (max-width: 600px) {
  /* Place the timelime to the left */
    .timeline::after {
      left: 31px;
    }
  
  /* Full-width containers */
    .container {
      width: 100%;
      padding-left: 70px;
      padding-right: 25px;
    }
  
  /* Make sure that all arrows are pointing leftwards */
    .container::before {
      left: 60px;
      border: medium solid white;
      border-width: 10px 10px 10px 0;
      border-color: transparent white transparent transparent;
    }
  
  /* Make sure all circles are at the same spot */
    .left::after, .right::after {
      left: 15px;
    }
  
  /* Make all right containers behave like the left ones */
    .right {
      left: 0%;
    }
  }

